Hide splash screen when startup has completed

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
         <meta name="description" content="CashPlot" />
         <meta name="keywords" content="finance graph charts" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <script>
+            // Mobile app: show splash screen before loading contents
+            if (navigator.splashscreen) navigator.splashscreen.show();
+        </script>
+
         <link rel="manifest" href="manifest.json" />
         <link rel="shortcut icon" href="favicon.ico" />
         <link
