--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,6 @@
         <meta name="keywords" content="finance graph charts" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <script>
-            // Mobile app: show splash screen before loading contents
-            if (navigator.splashscreen) navigator.splashscreen.show();
-        </script>
-
         <link rel="manifest" href="manifest.json" />
         <link rel="shortcut icon" href="favicon.ico" />
         <link
@@ -57,6 +52,12 @@
                 script.src = "http://localhost:35729/livereload.js";
                 document.body.appendChild(script);
             }
+
+            document.addEventListener(
+                "deviceready",
+                () => (window.deviceReadyCalled = true),
+                false,
+            );
         </script>
         <script src="js/bundle.js"></script>
     </body>
