--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" href="css/deps/normalize-8.0.1.css" />
         <link rel="stylesheet" href="css/deps/milligram-1.4.1.css" />
         <link rel="stylesheet" href="css/style.css" />
+        <!-- Load Cordova JS bridge (if possible) -->
+        <script src="cordova.js"></script>
     </head>
     <body>
         <div id="app">
