--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,9 @@
 
         <link rel="manifest" href="manifest.json" />
         <link rel="shortcut icon" href="favicon.ico" />
-        <link
-            rel="icon"
-            sizes="192x192"
-            href="assets/img/favicon-192x192.png"
-        />
-        <link
-            rel="icon"
-            sizes="512x512"
-            href="assets/img/favicon-512x512.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="assets/img/favicon-180x180.png"
-        />
+        <link rel="icon" sizes="192x192" href="assets/img/favicon-192x192.png" />
+        <link rel="icon" sizes="512x512" href="assets/img/favicon-512x512.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon-180x180.png" />
         <link rel="stylesheet" href="css/deps/normalize-8.0.1.css" />
         <link rel="stylesheet" href="css/deps/milligram-1.4.1.css" />
         <link rel="stylesheet" href="css/style.css" />
@@ -43,9 +31,7 @@
                         console.log("Service worker registered");
                     })
                     .catch((err) => {
-                        console.log(
-                            "Service worker registration failed: " + err,
-                        );
+                        console.log("Service worker registration failed: " + err);
                     });
             }
             // If ran from a local file, attempt to load the live reload script
@@ -55,11 +41,7 @@
                 document.body.appendChild(script);
             }
 
-            document.addEventListener(
-                "deviceready",
-                () => (window.deviceReadyCalled = true),
-                false,
-            );
+            document.addEventListener("deviceready", () => (window.deviceReadyCalled = true), false);
         </script>
         <script src="js/bundle.js"></script>
     </body>
